package symmetricencryption.encoding;

public class InvalidEncodingException extends Exception {
    public InvalidEncodingException() {}
}
