package symmetricencryption.encoding;

public class LowercaseLatinEncoding extends ASCIIOffsetEncoding {
    public LowercaseLatinEncoding() {
        super('a', 26);
    }
}
