package symmetricencryption.encoding;

public class UppercaseLatinEncoding extends ASCIIOffsetEncoding {
    public UppercaseLatinEncoding() {
        super('A', 26);
    }
}
